removed values of variables inside py files

--- a/gfa.ipynb
+++ b/gfa.ipynb
@@ -81,22 +81,20 @@
    "source": [
     "# CHANGE THE VALUES BELOW AS YOU CHECK GFA FOR OTHER PROJECTS\n",
     "\n",
-    "#original csv file downloaded from grades server\n",
-    "input_file_name = 'grades-gfa.csv'\n",
     "\n",
     "#gfa requirements for given assignment, key value should be the requirement title as listed in the grades server\n",
     "#value should be the points necessary to pass the GFA requirement\n",
     "#If it is an autograder projet with pub tests do this below\n",
-    "number_of_pub_tests = 6\n",
-    "points_per_pub_test = 1\n",
-    "number_of_pub_tests_needed_to_pass = 6\n",
-    "header_name = 'GFA'\n",
+    "number_of_pub_tests = 0\n",
+    "points_per_pub_test = 0\n",
+    "number_of_pub_tests_needed_to_pass = 0\n",
+    "header_name = ''\n",
     "columns = generate_pub_tests(number_of_pub_tests, points_per_pub_test, header_name)\n",
     "points_total = number_of_pub_tests*points_per_pub_test\n",
     "\n",
     "# if it is not an autograded project such as a Processing project, change the 'autograded' variable to False\n",
     "# you will have to manually fill out the dictionary below since it is manually graded\n",
-    "manual_columns = {'MB' : 10, 'BT' : 15, 'PC' : 15, 'SG' : 5}\n",
+    "manual_columns = {}\n",
     "points_total_2 = sum(manual_columns.values())\n",
     "\n",
     "#requirements will be used to filter columns from the original dataframe\n",
@@ -106,12 +104,15 @@
     "points_needed_to_pass_gfa = points_total if autograded else points_total_2\n",
     "\n",
     "#assignment name for the GFA that is listed in the grades server. (Spring 2022 is GFA1,2,3,4 etc)\n",
-    "assignment = 'GFA'\n",
-    "comment_pass = 'all GFAs Passed'\n",
-    "comment_fail = 'some GFAs Failed'\n",
+    "assignment = ''\n",
+    "comment_pass = ''\n",
+    "comment_fail = ''\n",
+    "\n",
+    "#original csv file downloaded from grades server\n",
+    "input_file_name = ''\n",
     "\n",
     "#output file name for csv\n",
-    "output_file_name = 'GFAFinal_Results.csv'\n",
+    "output_file_name = ''\n",
     "\n",
     "#call main\n",
     "main(input_file_name, output_file_name, requirements, points_needed_to_pass_gfa, comment_pass, comment_fail, assignment)\n",
